facultyId updated